src/main/java/com/craftinginterpreters/lox/lox.bnf


{
  tokens=[
//  keywords="regexp:var|if|else|for|or|and"
  number="regexp:\d+"
  IDENTIFIER="regexp:\p{Alpha}\w*"
  string='regexp:"\w+"'
  space='regexp:\s+'
  ]
}
// a == x?b==y?i:j:k
// a==x?3*4:5==6
program ::= declaration* <<eof>>;
declaration ::= varDecl | statement;
varDecl ::= var IDENTIFIER ( "=" expression)? ";";
statement ::= exprStmt
    |printStmt
    |assignment
    |block;
    block ::= "{" declaration "}";
exprStmt ::= expression ";";
printStmt ::= "print" expression ";";

expression ::= comma;
assignment ::= IDENTIFIER "=" assignment ';'
            |equality;
//ternary::= equality"?"ternary+":"ternary+;
comma ::= equality("," equality)*;
equality ::= comparison ( ("!=" | "==") comparison )*;
comparison ::= term ((">"|">="|"<"|"<=") term )*;
term ::= factor (("-"|"+") factor)*;
factor ::=unary(("/"|"*")unary)*;
unary ::=("!"|"-") unary
| primary;
primary ::= number|string|"true"|"false"|"nil"|"(" expression ")"|IDENTIFIER;
